--- a/visual/index.html
+++ b/visual/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.slider.min.js"></script>
 
-    <script type="text/javascript" src="./lib/pathfinding-browser.min.js"></script>
+    <script type="text/javascript" src="../lib/pathfinding-browser.min.js"></script>
 
     <script type="text/javascript" src="./js/view.js"></script>
     <script type="text/javascript" src="./js/controller.js"></script>
@@ -30,7 +30,7 @@
   <body>
     <div id="draw_area"></div>
 
-    <div id="instructions_panel" class="panel">
+    <!--<div id="instructions_panel" class="panel">
       <header>
         <h2 class="header_title">Instructions</h2>
         <span id="hide_instructions">hide</span>
@@ -40,7 +40,7 @@
       Drag the <span class="red">red</span> node to set the end position. <br>
       Choose an algorithm from the right-hand panel. <br>
       Click Start Search in the lower-right corner to start the animation.
-    </div>
+    </div>-->
 
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
@@ -111,6 +111,21 @@
 
         <h3 id="breadthfirst_header"><a href="#">Breadth-First-Search</a></h3>
         <div id="breadthfirst_section" class="finder_section">
+          <header class="option_header">
+            <h3>Options</h3>
+          </header>
+          <div class="optional sub_options">
+            <input type="checkbox" class="allow_diagonal" checked>
+            <label class="option_label">Allow Diagonal</label> <br>
+            <input type="checkbox" class="bi-directional">
+            <label class="option_label">Bi-directional</label> <br>
+            <input type="checkbox" class="dont_cross_corners">
+            <label class="option_label">Don't Cross Corners</label> <br>
+          </div>
+        </div>
+
+        <h3 id="deepfirst_header"><a href="#">Deep-First-Search</a></h3>
+        <div id="deepfirst_section" class="finder_section">
           <header class="option_header">
             <h3>Options</h3>
           </header>
@@ -220,10 +235,10 @@
     </div><!-- #algorithm_panel -->
 
     <div id="play_panel" class="panel right_panel">
+      <button id="button4" class="control_button">Step Search</button>
       <button id="button1" class="control_button">Start Search</button>
       <button id="button2" class="control_button">Pause Search</button>
       <button id="button3" class="control_button">Clear Walls</button>
-      <button id="button4" class="control_button">Step Search</button>
     </div>
 
     <div id="stats"></div>
